samples/errors/type_mismatch_arithmetic.opal
;; Error: passing a Bool where Int is expected in arithmetic

(let wont_add {}
  (+ True 1))
